# climate-finance

./: .gitignore  README.md  pyproject.toml
1_Data/final/: CODEBOOK.xlsx  [FINAL] Climate Finance PER CAPITA.csv
1_Data/pivot_tables/: [SUMMARY] annual_total_commitment.xlsx  [SUMMARY] provider_total_commitment.xlsx  [SUMMARY] provider_yearly_commitment.xlsx  [SUMMARY] recipient_per_capita_yearly.xlsx  [SUMMARY] recipient_total_commitment.xlsx  [SUMMARY] recipient_yearly_commitment.xlsx  [SUMMARY] region_concessionality_share.xlsx  [SUMMARY] region_yearly_commitment.xlsx  [SUMMARY] top_donors_by_recipient.xlsx  [SUMMARY] top_recipients_by_provider.xlsx
1_Data/raw/: [RAW] Sector.csv
2_Code/: main.py
2_Code/pipeline/: __init__.py  access.py  aggregate.py  clean.py  explore.py  summarize.py
2_Code/project_workflow/: __init__.py  config_main.py  data_preparation.py
3_Output/quarto/: figures_and_tables.py
