[project]
name = "crdf-2015-2023"
version = "0.1.0"
description = "Build final climate-finance datasets and analysis views from CRDF, population, and MVI inputs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "country-converter>=1.3.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]
